--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             ><a href="https://www.ixigo.com">ixigo</a>
           </p>
 
-          <p>I am an Full stack developer. I love play to cricket.</p>
+          <p>I am an Full stack developer and I love play to cricket.</p>
         </td>
       </tr>
     </table>
